--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
 
             <h2>Work Experience</h2>
             <div class="experience">
-                <h3>Engineer (Security/ML) | Qualcomm</h3>
+                <h3>Engineer (AISW) | Qualcomm</h3>
                 <p class="date-location">Jul 2023 – Present</p>
                 <ul>
-                    <li>Implemented real-time incident response and security monitoring for Qualcomm AI Studio using Python and SOAR, reducing false positives by 40%.</li>
-                    <li>Developed automated ML model processing system with role-based access controls, reducing processing time by 60%.</li>
+                    <li>Accelerated large model conversion by designing a lazy weight-loading system and core graph optimizations, significantly reducing memory overhead and processing time for models exceeding <b>100 parameters</b>.</li>
+                    <li>Engineered <b>64-bit DMA</b> support to overcome the 4GB memory limit, enabling efficient execution for the largest production LLMs and eliminating multi-partition descriptor complexity</li>
+                    <li>Scaled validation infrastructure to manage <b>200,000+</b> test cases, automating framework unification and increasing test coverage for critical compiler releases across <b>3 SOC platforms</b>.</li>
+                    <li>Reduced onboarding latency for new model architectures (e.g., Whisper, Llama) by building automated pipelines that cut manual configuration time by <b>50%</b> and ensured robustness in nightly testing.</b>.</li>
                 </ul>
             </div>
             <div class="experience">
@@ -91,12 +93,12 @@
         <div id="research" class="tab-content">
             <h2>Research Publications and Achievements</h2>
             <div class="experience">
-                <h3><a href="https://praveenabt.github.io/publications/MUD-Scale.pdf" target="_blank">Scaling IoT MUD Enforcement using Programmable DataPlanes</a></h3>
+                <h3><a href="https://hemanth3047-hub.github.io/publications/MUD-Scale.pdf" target="_blank">Scaling IoT MUD Enforcement using Programmable DataPlanes</a></h3>
                 <p class="date-location"> (Jul 2022 – May 2023)</p>
                 <p>Accepted to IEEE/IFIP NOMS'23, Miami, USA</p>
             </div>
             <div class="experience">
-                <h3><a href="https://praveenabt.github.io/publications/IoTMUD-FFSPIN.pdf" target="_blank">IoT MUD Enforcement in the Edge Cloud using Programmable Switch</a></h3>
+                <h3><a href="https://hemanth3047-hub.github.io/publications/IoTMUD-FFSPIN.pdf" target="_blank">IoT MUD Enforcement in the Edge Cloud using Programmable Switch</a></h3>
                 <p class="date-location">(Jul 2021 – May 2022)</p>
                 <p>Accepted to ACM SIGCOMM'22 workshop on Security for P4 - FFSPIN, Amsterdam, Netherlands</p>
             </div>
@@ -133,6 +135,12 @@
                 <h3><a href="https://github.com/Hemanth3047-hub/PPMS_FULL_STACK" target="_blank">PhD Progress Management System</a> | Flutter, Django</h3>
                 <ul>
                     <li>Led a team of three in developing an application for PhD scholars of IITH to track their academic progress and send alerts for upcoming deadlines.</li>
+                </ul>
+            </div>
+            <div class="experience">
+                <h3><a href="https://github.com/Hemanth3047-hub/Reliable-Data-Transfer-RDT-over-UDP/tree/main/Reliable-Data-Transfer-RDT-over-UDP-main/Reliable-Data-Transfer-RDT-over-UDP-main" target="_blank">UDP-based FTP tool</a> | Multi-thread, CPP</h3>
+                <ul>
+                    <li>developed a UDP-based FTP tool with Reliable Data Transfer mechanisms and multithreaded optimizations, achieving around <b>15%</b> higher throughput and <b>30%</b> lower latency than standard TCP file transfer tools in lossy network conditions.</li>
                 </ul>
             </div>
             <div class="experience">
