--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
         <!-- Coursework & Extracurricular Tab Content -->
         <div id="coursework" class="tab-content">
-            <h2>Coursework & Extracurricular</h2>
+            <h2>Coursework</h2>
             <h3>Relevant Coursework</h3>
             <ul>
                 <li>Computer Networks</li>
@@ -173,8 +173,8 @@
                 <li>Database Management Systems</li>
                 <li>Principles of Programming Languages</li>
             </ul>
-            <h3>Extracurricular Activities</h3>
-            <p>Details on extracurricular activities will be added here.</p>
+            <!-- <h3>Extracurricular Activities</h3>
+            <p>Details on extracurricular activities will be added here.</p> -->
         </div>
     </div>
     <script src="script.js"></script>
