--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <p>Accepted to ACM SIGCOMM'22 workshop on Security for P4 - FFSPIN, Amsterdam, Netherlands</p>
             </div>
             <div class="experience">
-                <h3><a href="https://drive.google.com/file/d/1JlupASg8C9uUNyeFKSC3Lq1g3cQHAbXT/view?usp=sharing" target="_blank">VAK UG Research Excellence Award, 2023 | Network Security Researcher @ IITH</a></h3>
+                <h3><a href="https://hemanth3047-hub.github.io/Certificates/VAK_Research_Award.pdf" target="_blank">VAK UG Research Excellence Award, 2023 | Network Security Researcher @ IITH</a></h3>
                 <p class="date-location">(Apr 2023)</p>
                 <p>Honored as the sole recipient of the top undergraduate researcher award for the 2023 batch</p>
             </div>
