Adding short bio

--- a/index.html
+++ b/index.html
@@ -49,12 +49,25 @@
             <div class="tab active" onclick="openTab('home')">Home</div>
             <div class="tab" onclick="openTab('research')">Research & Skills</div>
             <div class="tab" onclick="openTab('projects')">Projects</div>
-            <div class="tab" onclick="openTab('coursework')">Coursework & Extracurricular</div>
+            <div class="tab" onclick="openTab('coursework')">Coursework</div>
         </div>
 
         <!-- Home Tab Content -->
         <div id="home" class="tab-content">
+            <div class="about-section">
+                <h2>About Me</h2>
+                <p class="about-text">
+                    Hemanth Kothapalli is an Engineer (Qualcomm-AISW) and systems researcher focused on building secure and high-performance infrastructures for large-scale machine learning. His work spans programmable networks, distributed systems, and ML deployment, shaped by both academic research and industry experience. At IIT Hyderabad’s NetX Lab, he developed scalable dataplane mechanisms for IoT security, with results published in leading networking venues such as SIGCOMM, IEEE IFIP NOMS, and related forums. In industry, he strengthened his understanding of full-stack ML systems by working on optimization and performance bottlenecks across compilation, memory, and communication layers. Through these experiences, he has become deeply interested in how future AI clusters can integrate programmable switches, SmartNICs, and intelligent dataplanes to improve robustness, efficiency, and security. He aims to contribute to the next generation of distributed AI systems by unifying architectural thinking across networks, memory, and computation.
+                </p>
+            </div>
             <h2>Education</h2>
+<!-- 
+            <h2>About Me</h2>
+            <p class="about-text">
+                Hemanth Kothapalli is an Engineer (Qualcomm-AISW) and systems researcher focused on building secure and high-performance infrastructures for large-scale machine learning. His work spans programmable networks, distributed systems, and ML deployment, shaped by both academic research and industry experience. At IIT Hyderabad’s NetX Lab, he developed scalable dataplane mechanisms for IoT security, with results published in leading networking venues such as SIGCOMM, IEEE IFIP NOMS, and related forums. In industry, he strengthened his understanding of full-stack ML systems by working on optimization and performance bottlenecks across compilation, memory, and communication layers. Through these experiences, he has become deeply interested in how future AI clusters can integrate programmable switches, SmartNICs, and intelligent dataplanes to improve robustness, efficiency, and security. He aims to contribute to the next generation of distributed AI systems by unifying architectural thinking across networks, memory, and computation.
+            </p>
+            <h2>Education</h2> -->
+
             <div class="experience">
                 
                 <h3>Indian Institute of Technology, Hyderabad</h3>
