--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="mailto:7hemanthk@gmail.com">Email</a> • 
                 <a href="https://github.com/Hemanth3047-hub" target="_blank">GitHub</a> • 
                 <a href="https://www.linkedin.com/in/hemanthk1/" target="_blank">LinkedIn</a> • 
-                <a href="resume.pdf" target="_blank">Resume</a>
+                <a href="Resume.pdf" target="_blank">Resume</a>
             </p>
         </div>
 
