--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2 class="role">ML Systems Engineer & Network Security Researcher</h2>
 
             <p class="intro">
-                I am an engineer and systems researcher focused on building secure and high-performance
+                I am an Engineer and Systems Researcher focused on building secure and high-performance
                 infrastructures for large-scale machine learning. My work spans programmable networks,
                 distributed systems, and ML deployment, shaped by research at IIT Hyderabad’s NetX Lab
                 and industry experience at Qualcomm. I am interested in how future AI clusters can
