--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         <ul>
             <li><strong>2023:</strong> Paper accepted to IEEE/IFIP NOMS 2023.</li>
             <li><strong>2022:</strong> Paper accepted to ACM SIGCOMM Security for P4 Workshop.</li>
-            <li><strong>2023:</strong> Joined Qualcomm AI Software team as Engineer (AISW).</li>
+            <li><strong>2023:</strong> Joined Qualcomm AI Software team (AISW) as an Associate Engineer.</li>
+            <li><strong>2024:</strong> Promoted to Engineer (AISW) after completion of first cycle at Qualcomm.</li>
         </ul>
     </section>
 
@@ -147,7 +148,7 @@
         <h2>Projects</h2>
 
         <p>
-            <strong>Image Transition using Variational Autoencoders</strong><br>
+            <strong>Image Transition using Variational Autoencoders (Python, Machine Learning) </strong><br>
             Variational Autoencoder model for interpolating across latent spaces, improving interpolation
             consistency on weather and public datasets.
             <br>
@@ -163,11 +164,33 @@
         </p>
 
         <p>
-            <strong>Hand Gesture Recognition using CNNs</strong><br>
+            <strong>Hand Gesture Recognition using CNNs (Python, Machine Learning) </strong><br>
             Collected an ASL-style custom dataset and trained a CNN with 99.95% accuracy.
             <br>
             <a href="https://github.com/Hemanth3047-hub/Hand-Gesture-Recognition-using-Convolution-Neural-Network" target="_blank">GitHub</a>
         </p>
+
+        <p>
+            <strong>PhD's Progress Management System (Flutter, Django)</strong><br>
+            Led a four-member team in building an application for IITH PhD scholars to track milestones and receive deadline alerts throughout their program.
+            <br>
+            <a href="https://github.com/Hemanth3047-hub/PPMS_FULL_STACK" target="_blank">GitHub</a>
+        </p>
+
+        <p>
+            <strong>Covid-19 SIR Simulator (Python, Data Structures)</strong><br>
+            Developed a simulation to track suspected, infected, and recovered individuals using probabilistic state transitions, implemented with graphs, adjacency lists, and priority queues.
+            <br>
+            <a href="https://github.com/Hemanth3047-hub/Covid-19-SIR-Simulator" target="_blank">GitHub</a>
+        </p>
+
+        <p>
+            <strong>Management of Scientific Research Papers Database (PostgreSQL, DBMS) </strong><br>
+            Built a relational database from scratch, populated it with information about research publications and executed few challenging PostgreSQL queries.
+            <br>
+            <a href="https://github.com/Hemanth3047-hub/DBMS-II" target="_blank">GitHub</a>
+        </p>
+        
     </section>
 
 
